Target Java 21, build with Java 25 (#1927)
Raising the runtime baseline to Java 21 is necessary for compatibility with
Error Prone 2.43.0+. By raising the build baseline to Java 25 we reduce
maintenance overhead, without impacting downstream users.

Summary of changes:
- Generalize `generate-version-compatibility-overview.sh` to handle distinct
  JDK requirements and omit custom Git tags.
- Introduce SDKMAN! configuration to streamline environment setup for external
  contributors and to simplify future
  `generate-version-compatibility-overview.sh` maintenance.
- Update code to make use of Java 21 language features.
- Update code comments in accordance with the new Java baseline.
- Drop obsolete flags from `.mvn/jvm.config`.